# SecurKit

./: .gitignore  LICENSE  README.md  pyproject.toml  securkit.spec
screenshots/: index.html
scripts/: build.py  capture_screens.py
securkit/: __init__.py  __main__.py  _kdf_autotune.py  _ooxml.py  archive.py  crypto.py  hotlines.py  passphrase.py  scrubber.py  state.py
securkit/data/: hotlines.yaml
securkit/tui/: _input_utils.py  app.py  errors.py
securkit/tui/screens/: about.py  decrypt.py  encrypt.py  hotlines.py  welcome.py
securkit/tui/widgets/: passphrase_field.py
tests/: test_archive.py  test_crypto.py  test_drag_drop.py  test_encrypt_autofill.py  test_errors.py  test_kdf_autotune.py  test_office_realparser.py  test_ooxml_scrub.py  test_panic_ux.py  test_passphrase.py  test_scrubber.py  test_smoke.py  test_state.py
