[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "securkit"
version = "0.1.0"
description = "Whistleblower kit: archive, scrub, and encrypt a folder. AES-256-GCM + Argon2id, with a directory of legitimate reporting channels."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tony Celentano" }]
keywords = ["security", "encryption", "whistleblower", "tui", "textual", "aes-gcm", "argon2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "textual>=0.79",
    "cryptography>=42",
    "argon2-cffi>=23",
    "pillow>=10",
    "pikepdf>=8",
    "PyYAML>=6",
    "click>=8.1",
    "zxcvbn>=4.4.28",
    "lxml>=5",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.5",
    "ruff>=0.5",
    "mypy>=1.10",
    # Real-parser validators for scrubber output — confirms scrubbed docs
    # actually open in mainstream Office tooling, not just round-trip as XML.
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pyinstaller>=6.3",
]

[project.scripts]
securkit = "securkit.__main__:main"

[project.urls]
Source = "https://github.com/tony/SecurKitTUI"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
